# ObjectDetector

./: .gitmessage.txt  AlgorithmDocumentation.py
captures/: test_filter_pc_outliers.pcd
data/config/: intrinsic.json  template.json
src/config/: config.json  template.json
src/cpp/: CMakeLists.txt  inputCapture.cpp  inputCapture.h  objectDetector.cpp
src/cpp/config_handler/: configHandler.cpp  configHandler.h  config_handler.cpp  config_handler.h
src/cpp/error_handler/: errorHandler.cpp
src/cpp/gui_handler/: guiHandler.cpp
src/cpp/io/: captureintelsense.cpp  detectorIO.cpp
src/cpp/json_handler/: jsonHandler.cpp  json_handler.cpp  json_handler.h
src/cpp/json_handler/nlohmann_json/: CMakeLists.txt
src/cpp/pointcloud_handler/: pointCloudHandler.cpp
